--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,53 @@
 .header {
+    background-color: rgb(30, 230, 230);
+    height: 400px;
+    
+
+}
+.parte-superior{
+    display:flex;
+    align-items: center;
+    height: 100px;
+    
+
+}
+.titulo-principal{
+    width:50%;
+    align-items: center;
+    font-size: 21px;
+    font-style: italic;
+    margin-left: 2px ;
+    
+    
+
+}
+.navegador-menu{
+    width:50%;
+    font-style: italic;
+    
+
+}
+.menu{
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
+   
+    
+    
+}
+.menu-item > a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    
+
+}
+.menu-item > a:hover{
+    font-size: 30px;
+    text-decoration: underline;
+    color: #de2a2a;
+    
 }
 
-.main .services {
-}
 
-.main .news {
-}
 
-.main .team {
-}
-
-.footer {
-}
