--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,11 @@ body {
   height: 500px;
 }
 
+.titulo-header {
+  font-size: 20px;
+  margin-left: 15px;
+}
+
 .traductor,
 .learn,
 .practice {
@@ -41,6 +46,7 @@ body {
 .news {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .columna {
   display: flex;
@@ -134,6 +140,7 @@ body {
 .fotos {
   width: 150px;
   height: 200px;
+  -o-object-fit: fill;
   object-fit: fill;
 }
 
